--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/f2d-db
+SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/f2d_db
 SPRING_DATASOURCE_USERNAME=postgres
 SPRING_DATASOURCE_PASSWORD=password
 SPRING_JPA_HIBERNATE_DDL_AUTO=update
-POSTGRES_DB=f2d-db
+POSTGRES_DB=f2d_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
